--- a/project.gradle
+++ b/project.gradle
@@ -21,27 +21,32 @@
  * Project-specific settings. Unfortunately we cannot put the name in there!
  */
 group = "com.github.java-json-tools";
-version = "2.2.13-SNAPSHOT";
+version = "2.2.13";
 sourceCompatibility = JavaVersion.VERSION_1_7;
 targetCompatibility = JavaVersion.VERSION_1_7; // defaults to sourceCompatibility
+
+project.ext {
+    description = "A Java implementation of the JSON Schema specification";
+}
 
 /*
  * List of dependencies
  */
 dependencies {
-    compile(group: "com.google.guava", name: "guava", version: "28.1-android");
-    compile(group: "com.github.java-json-tools", name: "json-schema-core", version: "1.2.12");
-    compile(group: "com.sun.mail", name: "mailapi", version: "1.6.1");
-    compile(group: "joda-time", name: "joda-time", version: "2.9.7");
-    compile(group: "com.googlecode.libphonenumber", name: "libphonenumber", version: "8.10.22");
+    compile(group: "com.google.guava", name: "guava", version: "28.2-android");
+    compile(group: "com.github.java-json-tools", name: "json-schema-core", version: "1.2.13");
+    // FIXME: 1.6.4 exists, but has different license (EDL 1.0, EPL 2.0). Can update?
+    compile(group: "com.sun.mail", name: "mailapi", version: "1.6.2");
+    compile(group: "joda-time", name: "joda-time", version: "2.10.5");
+    compile(group: "com.googlecode.libphonenumber", name: "libphonenumber", version: "8.11.1");
     compile(group: "com.google.code.findbugs", name: "jsr305", version: "3.0.2");
-    compile(group: "net.sf.jopt-simple", name: "jopt-simple", version: "5.0.3");
-    testCompile(group: "org.testng", name: "testng", version: "6.10") {
+    compile(group: "net.sf.jopt-simple", name: "jopt-simple", version: "5.0.4");
+    testCompile(group: "org.testng", name: "testng", version: "7.1.0") {
         exclude(group: "junit", module: "junit");
         exclude(group: "org.beanshell", module: "bsh");
         exclude(group: "org.yaml", module: "snakeyaml");
     };
-    testCompile(group: "org.mockito", name: "mockito-core", version: "2.4.2");
+    testCompile(group: "org.mockito", name: "mockito-core", version: "2.28.2");
     // FIXME: update to 3.x once we're off of Java 7.
     testCompile(group: "org.assertj", name: "assertj-core", version: "2.9.1");
 }
@@ -54,10 +59,10 @@ javadoc {
             addStringOption("-release", "7");
         }
         links("https://docs.oracle.com/javase/7/docs/api/");
-        links("https://www.javadoc.io/doc/com.google.code.findbugs/jsr305/3.0.1/");
-        links("https://fasterxml.github.io/jackson-databind/javadoc/2.2.0/");
-        links("https://fasterxml.github.io/jackson-core/javadoc/2.2.0/");
-        links("https://www.javadoc.io/doc/com.google.guava/guava/28.1-android/");
+        links("https://www.javadoc.io/doc/com.google.code.findbugs/jsr305/3.0.2/");
+        links("https://fasterxml.github.io/jackson-databind/javadoc/2.10/");
+        links("https://fasterxml.github.io/jackson-core/javadoc/2.10/");
+        links("https://www.javadoc.io/doc/com.google.guava/guava/28.2-android/");
         links("https://java-json-tools.github.io/btf/");
         links("https://java-json-tools.github.io/msg-simple/");
         links("https://java-json-tools.github.io/jackson-coreutils/");
