--- a/project.gradle
+++ b/project.gradle
@@ -21,7 +21,7 @@
  * Project-specific settings. Unfortunately we cannot put the name in there!
  */
 group = "com.github.java-json-tools";
-version = "2.2.13";
+version = "2.2.14-SNAPSHOT";
 sourceCompatibility = JavaVersion.VERSION_1_7;
 targetCompatibility = JavaVersion.VERSION_1_7; // defaults to sourceCompatibility
 
@@ -34,7 +34,8 @@ project.ext {
  */
 dependencies {
     compile(group: "com.google.guava", name: "guava", version: "28.2-android");
-    compile(group: "com.github.java-json-tools", name: "json-schema-core", version: "1.2.13");
+    compile(group: "com.github.java-json-tools", name: "jackson-coreutils-equivalence", version: "1.0-SNAPSHOT");
+    compile(group: "com.github.java-json-tools", name: "json-schema-core", version: "1.2.14-SNAPSHOT");
     // FIXME: 1.6.4 exists, but has different license (EDL 1.0, EPL 2.0). Can update?
     compile(group: "com.sun.mail", name: "mailapi", version: "1.6.2");
     compile(group: "joda-time", name: "joda-time", version: "2.10.5");
@@ -60,8 +61,8 @@ javadoc {
         }
         links("https://docs.oracle.com/javase/7/docs/api/");
         links("https://www.javadoc.io/doc/com.google.code.findbugs/jsr305/3.0.2/");
-        links("https://fasterxml.github.io/jackson-databind/javadoc/2.10/");
-        links("https://fasterxml.github.io/jackson-core/javadoc/2.10/");
+        links("https://fasterxml.github.io/jackson-databind/javadoc/2.11/");
+        links("https://fasterxml.github.io/jackson-core/javadoc/2.11/");
         links("https://www.javadoc.io/doc/com.google.guava/guava/28.2-android/");
         links("https://java-json-tools.github.io/btf/");
         links("https://java-json-tools.github.io/msg-simple/");
