--- a/project.gradle
+++ b/project.gradle
@@ -36,8 +36,7 @@ dependencies {
     compile(group: "com.google.guava", name: "guava", version: "28.2-android");
     compile(group: "com.github.java-json-tools", name: "jackson-coreutils-equivalence", version: "1.0");
     compile(group: "com.github.java-json-tools", name: "json-schema-core", version: "1.2.14");
-    // FIXME: 1.6.4 exists, but has different license (EDL 1.0, EPL 2.0). Can update?
-    compile(group: "com.sun.mail", name: "mailapi", version: "1.6.2");
+    compile(group: "javax.mail", name: "javax.mail-api", version: "1.6.2");
     compile(group: "joda-time", name: "joda-time", version: "2.10.5");
     compile(group: "com.googlecode.libphonenumber", name: "libphonenumber", version: "8.11.1");
     compile(group: "com.google.code.findbugs", name: "jsr305", version: "3.0.2");
